--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 	</head>
 	<body>
 		<div class="postcard">
-			<div class="postcard-header"></div>
+			<div class="postcard-header">
+				<h1>My Postcard</h1>
+				<img
+					src="https://raw.githubusercontent.com/breatheco-de/exercise-postcard/e63a7916530cc850bd92aa1c2e19191837fb5c80/.learn/assets/4geeks.png
+				"
+					alt=""
+				/>
+			</div>
+
 			<div class="postcard-body"></div>
 			<div class="postcard-footer"></div>
 		</div>
