--- a/.learn/resets/12.1-body-content/index.html
+++ b/.learn/resets/12.1-body-content/index.html
@@ -5,9 +5,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Afonso's Postcard</title>
 		<link rel="stylesheet" href="styles.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet" />
 	</head>
 	<body>
 		<div class="postcard">
@@ -27,14 +24,12 @@
 				</div>
 
 				<div class="body-right">
-					<input type="text" placeholder="NAME" />
-					<input type="text" placeholder="EMAIL" />
-					<input type="text" placeholder="COMMENT" />
+					<input type="text" />
+					<input type="text" />
+					<input type="text" />
 				</div>
 			</div>
-			<div class="postcard-footer">
-				<button>Send My Postcard</button>
-			</div>
+			<div class="postcard-footer"></div>
 		</div>
 	</body>
 </html>
